# dayi-search-mcp

./: .gitignore  README.md  progress.md  pyproject.toml
docs/: wechat-project-intro.md
docs/reference/: dayi-glossary.md
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/python/dayi_core/core/: engine.py
mcp-server/python/dayi_core/parsers/: html_fields.py  nuxt_state.py
mcp-server/python/dayi_core/providers/: doctor.py  medical.py
mcp-server/scripts/: sync-python-core.mjs
mcp-server/src/: index.ts
skills/dayi-mcp-query/: SKILL.md
skills/dayi-mcp-query/agents/: openai.yaml
src/dayi_core/cli/: main.py
src/dayi_core/core/: engine.py  exceptions.py  fetcher.py  models.py
src/dayi_core/exporters/: console.py  json_exporter.py
src/dayi_core/providers/: base.py  disease.py  medical.py  symptom.py
tests/: test_cli.py  test_cli_query.py  test_engine_detail.py  test_medical_provider.py  test_multi_providers.py  test_nuxt_state_parser.py  test_search_api.py
tests/fixtures/: disease_detail_sample.html  doctor_detail_sample.html  medical_detail_sample.html  search_medical_sample.json  symptom_detail_sample.html
