[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dayi-python-core"
version = "0.1.0"
description = "Dayi medical information query core"
requires-python = ">=3.11"

[project.scripts]
dayi = "dayi_core.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
